SERVER-12947 Don't use MultipleErrorsPath if all errors are the same